[package]
name = "speed-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0"
colored = "3.0.0"
humansize = "2.1"
