[package]
name = "speed-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0"
colored = "3.0.0"
humansize = "2.1"
reqwest = { version = "0.12.22", features = ["json", "stream", "rustls-tls"], default-features = false }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"
url = "2.5"
statistical = "1.0.0"
trust-dns-resolver = "0.23"
rand = "0.9"
futures = "0.3"
bytes = "1.5"
urlencoding = "2.1"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
eyre = "0.6.12"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
num-format = "0.4.4"
